--- a/web/Front/Como_Funciona.xhtml
+++ b/web/Front/Como_Funciona.xhtml
@@ -13,7 +13,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                     <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                         <h1>Como Funciona</h1>
-                        <p>En metrópolis queremos que todo sea más fácil para ti, pulza en cada uno de nuestros tutoriales para hacer de esta plataforma una herramienta de tranajo completa. </p>
+                        <p>En metrópolis queremos que todo sea más fácil para ti, pulsa en cada uno de nuestros tutoriales para hacer de esta plataforma una herramienta de trabajo completa. </p>
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                             </div>
                             <div class="mj_workit_info">
                                 <img src="../images/COMOTRABAJO.png" alt="" height="264" class="img-responsive" />
-                                    <p class="mj_toppadder50">En metrópolis tienes la oportunidad de encontrar propuestas de trabajo posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica. </p>
+                                    <p class="mj_toppadder50">En metrópolis tienes la oportunidad de encontrar propuestas de proyectos posteadas por potenciales empleadores en busca de la persona indicada para llevar a cabo esa tarea específica. </p>
                             </div>
                             <div class="mj_workit_innerfooter">
                                 <a href="./Como_Contratar.xhtml">leer mas...</a>
