--- a/web/Front/Login.xhtml
+++ b/web/Front/Login.xhtml
@@ -14,7 +14,7 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                         <div class="mj_mainheading mj_toppadder80 mj_bottompadder50">
                             <h1><span>Ingresar a mi cuenta</span></h1>
-                            <p>Metrópolis es la plataforma que conecta usuarios, con trabajadores independientes que tienen la capacidad, experiencia y disposición para llevar a cabo los distintos trabajos que necesitas.</p>
+                            <p>Metrópolis es la plataforma que conecta usuarios, con afiliados independientes que tienen la capacidad, experiencia y disposición para llevar a cabo los distintos proyectos que necesitas.</p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="mj_pricing_footer">
                                     <p:commandLink id="loginLink" validateClient="true" styleClass="mj_showmorebtn mj_greenbtn" value="Iniciar Sesion" 
-                                                   update="growl formLoginn" action="#{loginBean.login(event)}" 
+                                                   update="growl formLoginn" action="#{loginBean.loginBody(event)}" 
                                                    oncomplete="handleLoginRequest(xhr, status, args)" >
                                         <h:outputText styleClass="mj_showmorebtn mj_greenbtn" value="Iniciar Sesión" />
 
