--- a/web/Front/Payu_landing.xhtml
+++ b/web/Front/Payu_landing.xhtml
@@ -14,7 +14,7 @@
             <h1>Pago Realizado</h1>
             <h1>Gracias por contar con nosotros</h1>
             <p>Esperamos que tengas la mejor de las experiencias
-                Recuerda calificar el trabajo al finalizar, con esto aseguramos 
+                Recuerda calificar el proyecto al finalizar, con esto aseguramos 
                 mantener el mejor estandar en nuestra Ciudad... </p>
         </div>
         <div class="row">
