--- a/web/Front/Resumendepagos.xhtml
+++ b/web/Front/Resumendepagos.xhtml
@@ -21,7 +21,7 @@
                             <table class="table">
                                 <tr>
                                     <th></th>
-                                    <th>Descripcion del Trabajo</th>
+                                    <th>Descripcion del Proyecto</th>
                                     <th>Valor Cotizado</th>
                                     <th>Tiempo Acordado</th>
                                     <th>Precio Final</th>
@@ -30,8 +30,8 @@
                                     <td><a href="#"><i class="fa fa-times"></i></a></td>
                                     <td>
                                         <h6>#{pagosBean.cotizacionPagar.descripcion}</h6>
-                                        <p><label>Trabajador:</label>#{pagosBean.nombresTrabajador}</p>
-                                        <p><label>FECHA:</label>#{pagosBean.cotizacionPagar.fechaTrabajo}</p>
+                                        <p><label>Afiliado</label>#{pagosBean.nombresTrabajador}</p>
+                                        <p><label>Fecha</label>#{pagosBean.cotizacionPagar.fechaTrabajo}</p>
                                     </td>
                                     <td><span>#{pagosBean.presupuestado}</span></td>
                                     <td>
