--- a/web/Front/Signup.xhtml
+++ b/web/Front/Signup.xhtml
@@ -34,10 +34,10 @@
                             <div class="mj_signup_section mj_blue_bg">
                                 <div class="mj_mainheading mj_toppadder80 mj_bottompadder30">
                                     <h1> TU eres la empresa... Con Metrópolis</h1>
-                                    <h1>tu trabajo llega a más personas</h1>
+                                    <h1>tu proyecto llega a más personas</h1>
                                 </div>
                                 <div class="mj_blog_btn">
-                                    <a href="#" class="mj_mainbtn mj_btnblack" data-text="trabajar" data-toggle="modal" data-target="#myModal1"><span>trabajar</span></a>
+                                    <a href="#" class="mj_mainbtn mj_btnblack" data-text="ofertar" data-toggle="modal" data-target="#myModal1"><span>Ofertar</span></a>
                                 </div>
                                 <div class="mj_signup_section_img">
                                     <img src="../images/SING_TRABAJAR.png" class="img-responsive" alt="trabjar"></img>
