--- a/web/Front/index.xhtml
+++ b/web/Front/index.xhtml
@@ -701,7 +701,7 @@
                                     </div>
                                     <div class="mj_countdata">
                                         <span class="timer" data-from="0" data-to="#{trabajadorBean.trabajadoresCount}" data-speed="3000" data-decimals="0"></span>
-                                        <p>Empleados</p>
+                                        <p>Afiliados</p>
                                     </div>
                                 </div>
                             </div>
@@ -740,7 +740,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-0 mj_toppadder80 mj_bottompadder50">
                                 <div class="mj_videosection_data mj_toppadder50">
                                     <h1>Como Funciona</h1>
-                                    <p>En metrópolis te ayudamos a ponerte en contacto de manera ágil, confiable y segura con la persona indicada para realizar el trabajo que necesitas.En solo 3 pasos ENCEUNTRA, COTIZA &amp; CONTRATACuéntanos que servicios buscas ejemplo: clases de matemáticas, pintor, modista, etc. Espera que nuestro buscador haga su trabajo. </p>
+                                    <p>En metrópolis te ayudamos a ponerte en contacto de manera ágil, confiable y segura con la persona indicada para realizar el trabajo que necesitas.En solo 3 pasos ENCEUNTRA, COTIZA &amp; ADJUDICACuéntanos que servicios buscas ejemplo: clases de matemáticas, pintor, modista, etc. Espera que nuestro buscador haga su trabajo. </p>
                                     <a href="Como_Funciona.xhtml" class="mj_readmore">Leer Mas</a>
                                 </div>
                             </div>
