--- a/web/Front/MainTemplete.xhtml
+++ b/web/Front/MainTemplete.xhtml
@@ -61,13 +61,13 @@
                                     <ul class="sub_menu">
                                         <li><a href="Como_Funciona.xhtml">COMO FUNCIONA</a>
                                         </li>
-                                        <li><a href="Como_Trabajar.xhtml">COMO TRABAJAR</a>
+                                        <li><a href="Como_Trabajar.xhtml">COMO OFERTAR</a>
                                         </li>
                                         <li><a href="Como_Hacer_Un_Pago.xhtml">COMO HACER PAGOS</a>
                                         </li>
-                                        <li><a href="Como_Contratar.xhtml">CÓMO ENCUENTRO UN TRABAJO</a>
+                                        <li><a href="Como_Contratar.xhtml">CÓMO ENCUENTRO UN PROYECTO</a>
                                         </li>
-                                        <li><a href="#">COMO TERMINAR TRABAJO</a>
+                                        <li><a href="#">COMO TERMINAR PROYECTO</a>
                                         </li>
 
                                         <li><a href="Signup.xhtml">CREAR CUENTA</a>
@@ -168,7 +168,7 @@
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-0 col-xs-offset-0">
                         <div class="mj_weight mj_bottompadder20">
                             <a href="index.xhtml"><img src="/Metropolis2/images/logo_footer.png" class="img-responsive" alt=""></img></a>
-                            <p>Metrópolis es la plataforma que conecta usuarios, con trabajadores independientes que tienen la capacidad, experiencia y disposición para llevar a cabo los distintos trabajos que necesitas.</p>
+                            <p>La función de Metrópolis es la de poner en contacto personas que ofrecen sus servicios con otras que tienen una necesidad inmediata y facilitar su contacto u ofrecimiento a través del sitio web.</p>
                         </div>
                         <div class="mj_weight mj_bottompadder20"><span>Suscribase</span>
                             <form class="form-inline mj_newsletter">
