--- a/web/Front/Trabajador.xhtml
+++ b/web/Front/Trabajador.xhtml
@@ -61,7 +61,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <div class="row">
                                 <div class="mj_showjob">
-                                    <p>Mostrando <strong>#{ofertaBean.ofertasCount}</strong> Ofertas de trabajo</p>
+                                    <p>Mostrando <strong>#{ofertaBean.ofertasCount}</strong> Ofertas de proyectos</p>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
 
                                         <h:column  >
                                             <div style="text-align: center;">
-                                                <h:commandLink action="#{ofertaBean.gotoTrabajo(oferta)}">
+                                                <h:commandLink action="#{ofertaBean.toCotizar(oferta)}">
                                                     <h:outputText value="#{oferta.trabajo.titulo}" />
                                                 </h:commandLink>
                                             </div>
