Cambios Brian 21 de Junio

--- a/web/Front/MainTemplete_Logeado.xhtml
+++ b/web/Front/MainTemplete_Logeado.xhtml
@@ -124,9 +124,11 @@
                             <div class="mj_profilediv" id="my_profile_div">
                                 <h:form id="formLogout">
                                     <ul>
-                                        <li><a href="modificarPerfil.xhtml"><i class="fa fa-user"></i> Mi cuenta</a>
+                                        <li><a href="../Front/modificarPerfil.xhtml"><i class="fa fa-user"></i> Perfíl</a>
                                         </li>
-                                        <li><a href="administrarTrabajos.xhtml"><i class="fa fa-suitcase"></i>Administrar Proyectos</a>
+                                        <li><a href="../Front/administrarTrabajos.xhtml"><i class="fa fa-suitcase"></i>Afiliados</a>
+                                        </li>
+                                        <li><a href="administrarCotizaciones.xhtml"><i class="fa fa fa-inbox"></i> Mi cuenta </a>
                                         </li>
                                         <li>
                                             <p:commandLink value="Cerrar Sesión" 
