--- a/web/Front/modificarPerfil.xhtml
+++ b/web/Front/modificarPerfil.xhtml
@@ -45,14 +45,17 @@
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <div class="mj_sidebar_wrapper">
                             <aside class="widget widget_posts">
-                                <h4 class="widget-title">Administracion</h4>
-                                <ul>
-                                    <li><a href="modificarPerfil.xhtml"><i class="fa fa fa-user"></i> Mi cuenta </a>
-                                    </li> 
-                                    <li><a href="administrarTrabajos.xhtml"><i class="fa fa fa-suitcase"></i> Administrar Trabajos </a>
-                                    </li>                                    
-                                </ul>
-                            </aside>                            
+                            <h4 class="widget-title">Administracion</h4>
+                            <ul>
+                                <li><a href="modificarPerfil.xhtml"><i class="fa fa fa-user"></i> Perfíl </a>
+                                </li>
+                                <li><a href="administrarTrabajos.xhtml"><i class="fa fa fa-suitcase"></i> Afiliados </a>
+                                </li>
+                                <li><a href="administrarCotizaciones.xhtml"><i class="fa fa fa-inbox"></i> Mi cuenta </a>
+                                </li>
+                            </ul>
+                            
+                        </aside>                          
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" >
